<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.SearchActivity">

    <include
        layout="@layout/edit_text_search_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/activity_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/linear_layout_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textinputlayout_keyword">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_search_textinputlayout_begin_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <EditText
                android:id="@+id/fragment_search_edittext_begin_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_36dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/begin_date"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_search_textinputlayout_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <EditText
                android:id="@+id/fragment_search_edittext_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_36dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/end_date"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <include
        layout="@layout/checkboxes"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_search_button_search"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/search_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_checkboxes_root" />

</androidx.constraintlayout.widget.ConstraintLayout>