<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.SearchActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>

    <FrameLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:id="@+id/activity_search_framelayout"/>

</LinearLayout>