<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.textfield.TextInputLayout

    android:id="@+id/textinputlayout_keyword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/edittext_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/keyword"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="UnusedAttribute" />

</com.google.android.material.textfield.TextInputLayout>