<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".views.activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/activity_main_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.tabs.TabLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/activity_main_framelayout">

        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/activity_main_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/activity_main_nav_header"
        app:menu="@menu/activity_main_menu_drawer"/>
</androidx.drawerlayout.widget.DrawerLayout>