...

        Thanks for your download ! ;)
    </string>
    <string name="new_york_times_logo">New York Times Logo</string>
    <string name="articles">Articles</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toolbar_back_button">Navigate up</string>
    <string name="cancel">Cancel</string>
    <string name="error_keyword_checkboxes">You must enter a keyword and check at least one category !</string>
</resources>

